--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -10,7 +10,7 @@
   <meta http-equiv="expires" content="0">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body class="theme">
 <app-root></app-root>
 </body>
 </html>
